# computer_science_task1

./: card.tex  pyproject.toml
.github/workflows/: latex_actions.yml
